/*
 * Copyright 2017-present Open Networking Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
option java_package = "org.onosproject.grpc.net.region.models";

package net.region;

enum RegionTypeProto {
    /**
     * Region represents an entire continent.
     */
    CONTINENT = 0;

    /**
     * Region represents an entire country.
     */
    COUNTRY = 1;

    /**
     * Region represents a metropolitan area.
     */
    METRO = 2;

    /**
     * Region represents a campus.
     */
    CAMPUS = 3;

    /**
     * Region represents a building.
     */
    BUILDING = 4;

    /**
     * Region represents a data center.
     */
    DATA_CENTER = 5;

    /**
     * Region represents a building floor.
     */
    FLOOR = 6;

    /**
     * Region represents a room.
     */
    ROOM = 7;

    /**
     * Region represents a rack.
     */
    RACK = 8;

    /**
     * Region represents a logical grouping.
     */
    LOGICAL_GROUP = 9;
}